fixed some minor bugs, such as icons not showing up. added comments and a transition effect when hovering over buttons for project.html. added content to art.html, code.html, and music.html. added an audio player to html. adjusted color pallete and background images for the website.

--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,8 @@ footer{
     border-radius: 15px;
     border-color: rgb(106, 7, 7);
 }
+
+.illustrations{
+    width: 50px;
+    height: 50px;
+}
